refat: file root
refact: css & js file root

refact: css & js file root

refact: css & js file root

fix: bottom nav path

fix: bottom nav path

--- a/account_detail.html
+++ b/account_detail.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 個人檔案</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       基本資料
     </h2>
@@ -77,9 +77,9 @@
     <!-- 好友推廣 -->
     <!-- <div class="card bg-secondary w-100" style="width: 18rem;">
           <div class="card-header d-flex flex-row justify-content-between pb-1 mt-2">
-            <img class="" src="../assets/img/title_decorate_right.svg" alt="">
+            <img class="" src="./assets/img/title_decorate_right.svg" alt="">
             <div class="fw-bold">好友推廣</div>
-            <img class="" src="../assets/img/title_decorate_left.svg" alt="">
+            <img class="" src="./assets/img/title_decorate_left.svg" alt="">
           </div>
           <div class="card-body pt-1">
             <form>
@@ -92,11 +92,11 @@
               <div class="mb-3 px-0 mx-1">
                 <div class="position-relative">
                   <input type="text" class="form-control border border-primary bg-dark" id="inputPassword" value="https://gogo168.com/dalebobo/hotemp/">
-                  <img class="position-absolute top-50 end-0 translate-middle" src="../assets/img/copy.svg" alt="copy">
+                  <img class="position-absolute top-50 end-0 translate-middle" src="./assets/img/copy.svg" alt="copy">
                 </div>
               </div>
             </form>
-            <img class="d-block mx-auto" src="../assets/img/qrcode.png" alt="qrcode">
+            <img class="d-block mx-auto" src="./assets/img/qrcode.png" alt="qrcode">
             <p class="text-center text-secondary fs-8 mt-2 mb-0">長按二維碼保存到相冊</p>
           </div>
         </div> -->
@@ -104,7 +104,7 @@
   </div>
   <div class="mb-2"></div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
