--- a/add_value_history.html
+++ b/add_value_history.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 儲值紀錄</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       儲值紀錄
     </h2>
@@ -92,7 +92,7 @@
     <!-- list -->
     <a class="d-block text-decoration-none text-secondary card mb-1" href="add_value_detail.html">
       <div class="card-body py-2 d-flex flex-row px-3">
-        <img class="me-2" src="../assets/img/market.svg" alt="bank">
+        <img class="me-2" src="./assets/img/market.svg" alt="bank">
         <div>
           <div>超商儲值</div>
           <div class="text-muted fs-8">03-29 18:33:24</div>
@@ -105,7 +105,7 @@
     </a>
     <a class="d-block text-decoration-none text-secondary card mb-1" href="add_value_detail.html">
       <div class="card-body py-2 d-flex flex-row px-3">
-        <img class="me-2" src="../assets/img/bank_icon.svg" alt="bank">
+        <img class="me-2" src="./assets/img/bank_icon.svg" alt="bank">
         <div>
           <div>銀行轉帳</div>
           <div class="text-muted fs-8">03-29 18:33:24</div>
@@ -118,7 +118,7 @@
     </a>
     <a class="d-block text-decoration-none text-secondary card mb-1" href="add_value_detail.html">
       <div class="card-body py-2 d-flex flex-row px-3">
-        <img class="me-2" src="../assets/img/bank_icon.svg" alt="bank">
+        <img class="me-2" src="./assets/img/bank_icon.svg" alt="bank">
         <div>
           <div>銀行轉帳</div>
           <div class="text-muted fs-8">03-29 18:33:24</div>
@@ -130,7 +130,7 @@
       </div>
     </a>
     <div class="mx-auto my-5 text-center">
-      <img src="../assets/img/no_data.svg" alt="no_data">
+      <img src="./assets/img/no_data.svg" alt="no_data">
       <div class="d-grid gap-2 mt-3">
         <a class="btn btn-primary btn-lin fs-6" href="add_value.html">返回</a>
       </div>
@@ -139,7 +139,7 @@
   </div>
   <div class="mb-2"></div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
