--- a/auction.html
+++ b/auction.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 提款</title>
 </head>
 
@@ -19,7 +19,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換成功</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -29,7 +29,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -39,7 +39,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -49,7 +49,7 @@
   <!-- Toast 訊息，根據需求使用 end-->
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       提款
     </h2>
@@ -68,7 +68,7 @@
               aria-controls="offcanvasBottom">
               <input type="text" class="form-control  rounded-3" id="inputQutionType" placeholder="請選擇銀行名稱"
                 aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
-              <img class="d-block" src="../assets/img/arrow-right.svg" alt=""
+              <img class="d-block" src="./assets/img/arrow-right.svg" alt=""
                 style="position: absolute;right: 8px;top: 15px;z-index: 9;">
               <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
             </div>
@@ -143,7 +143,7 @@
       <div class=" position-relative py-2 d-flex flex-row align-items-center">
         <div class="card-title w-100 d-flex">
           <div class="me-1">我的錢包</div>
-          <img class="me-auto" src="../assets/img/renew.svg" alt="">
+          <img class="me-auto" src="./assets/img/renew.svg" alt="">
           <span class="fs-7" data-bs-toggle="modal" data-bs-target="#recycle">一鍵回收</span>
         </div>
 
@@ -153,7 +153,7 @@
         <div
           class="position-relative d-flex flex-row justify-content-between align-items-center rounded-3 border  w-100 p-3">
           <div class="d-flex flex-row align-items-center">
-            <img src="../assets/img/wallet.svg" alt="">
+            <img src="./assets/img/wallet.svg" alt="">
             <div class="ms-1">主帳戶點數</div>
           </div>
           <div class="me-1 text-primary fw-bolder">$ 1,234,567.<span class="fs-7">00</span></div>
@@ -165,7 +165,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -173,7 +173,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -181,7 +181,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -189,7 +189,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -197,7 +197,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -205,7 +205,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -213,7 +213,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -221,7 +221,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -229,7 +229,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -237,7 +237,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -245,7 +245,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -253,7 +253,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -261,7 +261,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -299,21 +299,21 @@
           <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio1">
             <div class="me-2">中信</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="canvas-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio2">
             <div class="me-auto">國泰</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="canvas-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio3">
             <div>台銀</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
       </div>
@@ -327,7 +327,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換成功</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -337,7 +337,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -347,7 +347,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -407,7 +407,7 @@
     </div>
   </div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
   <!-- offcanvasBottom -->
   <script type="text/javascript">
