--- a/bank_account.html
+++ b/bank_account.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 帳戶管理</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       帳戶管理
     </h2>
@@ -57,7 +57,7 @@
               aria-controls="offcanvasBottom">
               <input type="text" class="form-control rounded-3 is-invalid" id="inputQutionType" placeholder="請選擇銀行名稱"
                 aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
-              <img class="d-block" src="../assets/img/arrow-right.svg" alt=""
+              <img class="d-block" src="./assets/img/arrow-right.svg" alt=""
                 style="position: absolute;right: 8px;top: 15px;z-index: 9;">
               <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
             </div>
@@ -82,7 +82,7 @@
 
 
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <!-- 銀行下拉 -->
   <!-- offcanvas -->
   <div class="offcanvas offcanvas-bottom rounded-top-lg border-0" tabindex="-1" id="offcanvasBottom"
@@ -96,21 +96,21 @@
           <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio1">
             <div class="me-2">中信</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="canvas-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio2">
             <div class="me-auto">國泰</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="canvas-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio3">
             <div>台銀</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
       </div>
