--- a/game_record_detail.html
+++ b/game_record_detail.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 遊戲記錄明細</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       遊戲記錄明細
     </h2>
@@ -78,7 +78,7 @@
     </div>
     <!-- 資訊 end-->
   </div>
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
