--- a/game_record_history.html
+++ b/game_record_history.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 遊戲紀錄</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       遊戲紀錄
     </h2>
@@ -52,42 +52,42 @@
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_1" autocomplete="off" checked>
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_1">
             <div class="text-gray2e fs-7">所有平台</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_2" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_2">
             <div class="text-gray2e fs-7">真人娛樂</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_3" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_3">
             <div class="text-gray2e fs-7">棋牌遊戲</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_4" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_4">
             <div class="text-gray2e fs-7">電競</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_5" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_5">
             <div class="text-gray2e fs-7">彩票投注</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_6" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_6">
             <div class="text-gray2e fs-7">電子遊藝</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
       </div>
@@ -246,7 +246,7 @@
 
 
     <div class="mx-auto my-5 text-center">
-      <img src="../assets/img/no_data.svg" alt="no_data">
+      <img src="./assets/img/no_data.svg" alt="no_data">
       <div class="d-grid gap-2 mt-3">
         <a class="btn btn-primary fs-6 btn-lin" href="account.html">返回</a>
       </div>
@@ -255,7 +255,7 @@
   </div>
   <div class="mb-2"></div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
   <!-- 日期選擇 -->
   <script>
