--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div class="d-flex py-1 justify-content-between align-items-center">
         <div class="me-auto">
           <div class="d-flex flex-row align-items-center">
-            <a class="d-block me-1" href="/pages/account.html">
+            <a class="d-block me-1" href="./account.html">
               <img src="assets/img/vip-level-1.png" style="width:36px" alt="vip_level">
             </a>
             <div data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
@@ -183,19 +183,19 @@
         </div>
         <div class="">
           <div class="d-flex flex-row justify-content-end">
-            <a class=" text-center text-white text-decoration-none" href="/pages/add_value.html">
+            <a class=" text-center text-white text-decoration-none" href="./add_value.html">
               <div class="d-flex flex-column justify-content-end">
                 <img style="margin-bottom:-10px" src="assets/img/add_value.png" alt="add_value">
                 <span class="fs-8 lh-sm align-text-bottom text-primary">儲值</span>
               </div>
             </a>
-            <a class=" text-center text-white text-decoration-none" href="/pages/transe_point.html">
+            <a class=" text-center text-white text-decoration-none" href="./transe_point.html">
               <div class="d-flex flex-column justify-content-end">
                 <img style="margin-bottom:-10px" src="assets/img/transe.png" alt="transe">
                 <span class="fs-8 lh-sm align-text-bottom text-primary">轉點</span>
               </div>
             </a>
-            <a class="text-center text-white text-decoration-none" href="/pages/auction.html">
+            <a class="text-center text-white text-decoration-none" href="./auction.html">
               <div class="d-flex flex-column justify-content-end">
                 <img style="margin-bottom:-10px" src="assets/img/auction_icon.png" alt="">
                 <span class="fs-8 lh-sm align-text-bottom text-primary">拍賣</span>
@@ -367,22 +367,22 @@
           <span>首頁</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/pages/promotions.html">
+          href="./promotions.html">
           <img src="./assets/img/present_icon.svg" alt="present_icon">
           <span>優惠</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/pages/contact.html">
+          href="./contact.html">
           <img src="./assets/img/help_icon.svg" alt="help_icon">
           <span>客服</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/pages/add_value.html">
+          href="./add_value.html">
           <img src="./assets/img/icon-recharge.svg" alt="help_icon">
           <span>儲值</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/pages/account.html">
+          href="./account.html">
           <img src="./assets/img/member-center-icon.svg" alt="account_icon">
           <span>會員</span>
         </a>
