--- a/password_edit.html
+++ b/password_edit.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 密碼修改</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account_detail.html"><img src="../assets/img/arrow_right_gray.svg"
+    <a class="back-icon" href="account_detail.html"><img src="./assets/img/arrow_right_gray.svg"
         alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       密碼修改
@@ -35,8 +35,8 @@
           </div>
           <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
           <div class="checkEye " onclick="showPassword('signUp_inputPassword_check')">
-            <img class="eyeOpen signUp_inputPassword_check" src="/assets/img/eye_show.svg" alt="eye_open">
-            <img class="eyeClose signUp_inputPassword_check d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+            <img class="eyeOpen signUp_inputPassword_check" src="./assets/img/eye_show.svg" alt="eye_open">
+            <img class="eyeClose signUp_inputPassword_check d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
           </div>
         </div>
 
@@ -50,8 +50,8 @@
           </div>
           <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
           <div class="checkEye is-invalid" onclick="showPassword('newPassword')">
-            <img class="eyeOpen newPassword" src="/assets/img/eye_show.svg" alt="eye_open">
-            <img class="eyeClose newPassword d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+            <img class="eyeOpen newPassword" src="./assets/img/eye_show.svg" alt="eye_open">
+            <img class="eyeClose newPassword d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
           </div>
         </div>
 
@@ -65,8 +65,8 @@
           </div>
           <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
           <div class="checkEye" onclick="showPassword('newPasswordConfirm')">
-            <img class="eyeOpen newPasswordConfirm" src="/assets/img/eye_show.svg" alt="eye_open">
-            <img class="eyeClose newPasswordConfirm d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+            <img class="eyeOpen newPasswordConfirm" src="./assets/img/eye_show.svg" alt="eye_open">
+            <img class="eyeClose newPasswordConfirm d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
   </div>
   <!-- 確認窗 Modal end-->
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script>
     function showPassword(inputId) {
       const eye_open = document.querySelector(`.eyeOpen.${inputId}`);
