--- a/promotions.html
+++ b/promotions.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 優惠活動</title>
 </head>
 
@@ -90,28 +90,28 @@
     <div class="container-fluid px-4">
       <div class="navbar-nav w-100 justify-content-between">
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/">
-          <img src="/assets/img/home_icon.svg" alt="home_icon">
+          href="./index.html">
+          <img src="./assets/img/home_icon.svg" alt="home_icon">
           <span>首頁</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center active"
           href="#">
-          <img src="/assets/img/present_icon_light.svg" alt="present_icon">
+          <img src="./assets/img/present_icon_light.svg" alt="present_icon">
           <span>優惠</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/pages/contact.html">
-          <img src="/assets/img/help_icon.svg" alt="help_icon">
+          href="./contact.html">
+          <img src="./assets/img/help_icon.svg" alt="help_icon">
           <span>客服</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="add_value.html">
-          <img src="/assets/img/icon-recharge.svg" alt="help_icon">
+          <img src="./assets/img/icon-recharge.svg" alt="help_icon">
           <span>儲值</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="account.html">
-          <img src="/assets/img/member-center-icon.svg" alt="account_icon">
+          <img src="./assets/img/member-center-icon.svg" alt="account_icon">
           <span>會員</span>
         </a>
       </div>
@@ -119,7 +119,7 @@
   </nav>
   <!-- 下方功能列 end-->
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
