--- a/transe_history.html
+++ b/transe_history.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 優惠紀錄</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       交易紀錄
     </h2>
@@ -70,7 +70,7 @@
 
 
     <div class="mx-auto my-5 text-center">
-      <img src="../assets/img/no_data.svg" alt="no_data">
+      <img src="./assets/img/no_data.svg" alt="no_data">
       <div class="d-grid gap-2 mt-3">
         <a class="btn btn-primary btn-lin fs-6" href="account.html">返回</a>
       </div>
@@ -79,7 +79,7 @@
   </div>
   <div class="mb-2"></div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
