--- a/vip_level.html
+++ b/vip_level.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 會員中心</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header custom-header-has-bg">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       會員等級
     </h2>
@@ -32,19 +32,19 @@
         <div class="me-auto d-flex flex-column justify-content-center">
           <div>帳號名稱</div>
         </div>
-        <img style="width:60px;height:60px" src="../assets/img/vip-level-1.png" alt="arrow_right_white">
+        <img style="width:60px;height:60px" src="./assets/img/vip-level-1.png" alt="arrow_right_white">
       </a>
     </div>
     <div class="info-progress mt-3">
       <div class="now-level">
-        <img class="mx-1" src="../assets/img/level-icon-1.svg" alt="" srcset="">
+        <img class="mx-1" src="./assets/img/level-icon-1.svg" alt="" srcset="">
       </div>
       <div class="vip-progress-bar">
         <!-- 這邊設定進度條％數 -->
         <div class="progress-persent" style="width: 37%;"></div>
       </div>
       <div class="next-level">
-        <img class="mx-1" src="../assets/img/level-icon-2.svg" alt="" srcset="">
+        <img class="mx-1" src="./assets/img/level-icon-2.svg" alt="" srcset="">
       </div>
     </div>
     <div class="bet-info-wrap mb-0">
@@ -69,11 +69,11 @@
     </div>
 
     <div class="vip-card-wrap" id="vip-card-wrap">
-      <img src="../assets/img/vip-card-1.png" class="vip-card-item"></img>
-      <img src="../assets/img/vip-card-2.png" class="vip-card-item"></img>
-      <img src="../assets/img/vip-card-3.png" class="vip-card-item"></img>
-      <img src="../assets/img/vip-card-4.png" class="vip-card-item"></img>
-      <img src="../assets/img/vip-card-5.png" class="vip-card-item"></img>
+      <img src="./assets/img/vip-card-1.png" class="vip-card-item"></img>
+      <img src="./assets/img/vip-card-2.png" class="vip-card-item"></img>
+      <img src="./assets/img/vip-card-3.png" class="vip-card-item"></img>
+      <img src="./assets/img/vip-card-4.png" class="vip-card-item"></img>
+      <img src="./assets/img/vip-card-5.png" class="vip-card-item"></img>
     </div>
   </div>
   <!-- vip line & card end -->
@@ -85,21 +85,21 @@
       <div class="card-title">VIP1福利</div>
       <div class="card-body pb-0 d-flex flex-wrap align-items-center justify-content-between">
         <div class="vip-desc-item">
-          <img src="../assets/img/vip-upgrade-icon.svg" alt="">
+          <img src="./assets/img/vip-upgrade-icon.svg" alt="">
           <div class="vip-item-box">
             <div class="back-num">--</div>
             <div class="third">升級禮金<br /> &nbsp;</div>
           </div>
         </div>
         <div class="vip-desc-item">
-          <img src="../assets/img/vip-month-good.svg" alt="">
+          <img src="./assets/img/vip-month-good.svg" alt="">
           <div class="vip-item-box">
             <div class="back-num">--</div>
             <div class="third">每月福利<br /> &nbsp;</div>
           </div>
         </div>
         <div class="vip-desc-item">
-          <img src="../assets/img/vip-free.svg" alt="">
+          <img src="./assets/img/vip-free.svg" alt="">
           <div class="vip-item-box">
             <div class="back-num">1</div>
             <div class="third">單週免手續<br />費出款次數</div>
@@ -182,35 +182,35 @@
     <div class="container-fluid px-4">
       <div class="navbar-nav w-100 justify-content-between">
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/">
-          <img src="/assets/img/home_icon.svg" alt="home_icon">
+          href="./index.html">
+          <img src="./assets/img/home_icon.svg" alt="home_icon">
           <span>首頁</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center active"
-          href="/pages/promotions.html">
-          <img src="/assets/img/present_icon.svg" alt="present_icon">
+          href="./promotions.html">
+          <img src="./assets/img/present_icon.svg" alt="present_icon">
           <span>優惠</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/pages/contact.html">
-          <img src="/assets/img/help_icon.svg" alt="help_icon">
+          href="./contact.html">
+          <img src="./assets/img/help_icon.svg" alt="help_icon">
           <span>客服</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="add_value.html">
-          <img src="/assets/img/icon-recharge.svg" alt="help_icon">
+          <img src="./assets/img/icon-recharge.svg" alt="help_icon">
           <span>儲值</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="#">
-          <img src="/assets/img/member-center-icon-active.svg" alt="account_icon">
+          <img src="./assets/img/member-center-icon-active.svg" alt="account_icon">
           <span>會員</span>
         </a>
       </div>
     </div>
   </nav>
   <!-- 下方功能列 end-->
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
   <script>
     const linePosition = (document.documentElement.scrollWidth - 55) / 2
