--- a/account.html
+++ b/account.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 會員中心</title>
 </head>
 
@@ -34,11 +34,11 @@
         <div class="me-auto d-flex flex-column justify-content-center">
           <div class="fw-bold d-flex align-items-center">
             <div>帳號名稱</div>
-            <img class="mx-1" src="../assets/img/level-icon-1.svg" alt="" srcset="">
+            <img class="mx-1" src="./assets/img/level-icon-1.svg" alt="" srcset="">
           </div>
           <div class="text-muted fs-8">account1234</div>
         </div>
-        <img class="rotateY" src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white">
+        <img class="rotateY" src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white">
       </a>
     </div>
     <!-- VIP Level & 帳號 end-->
@@ -50,21 +50,21 @@
         <div>
           <a class="d-block" href="account_detail.html" style="height: 27px;width: 68px;position: absolute;"></a>
           <div>
-            <img src="../assets/img/vip-header-detail.svg" class="header-detail" alt="">
+            <img src="./assets/img/vip-header-detail.svg" class="header-detail" alt="">
           </div>
           </a>
         </div>
       </div>
       <div class="info-progress">
         <div class="now-level">
-          <img class="mx-1" src="../assets/img/level-icon-1.svg" alt="" srcset="">
+          <img class="mx-1" src="./assets/img/level-icon-1.svg" alt="" srcset="">
         </div>
         <div class="vip-progress-bar">
           <!-- 這邊設定進度條％數 -->
           <div class="progress-persent" style="width: 37%;"></div>
         </div>
         <div class="next-level">
-          <img class="mx-1" src="../assets/img/level-icon-2.svg" alt="" srcset="">
+          <img class="mx-1" src="./assets/img/level-icon-2.svg" alt="" srcset="">
         </div>
       </div>
       <div class="bet-info-wrap mb-0">
@@ -93,22 +93,22 @@
         <div class="row mx-2">
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="add_value.html">
-            <div><img class="w-100" src="../assets/img/recharge_icon.svg" alt=""></div>
+            <div><img class="w-100" src="./assets/img/recharge_icon.svg" alt=""></div>
             <div class="text-nowrap btn-txt">儲值</div>
           </a>
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="auction.html">
-            <div><img class="w-100" src="../assets/img/auction_icon.svg" alt=""></div>
+            <div><img class="w-100" src="./assets/img/auction_icon.svg" alt=""></div>
             <div class="text-nowrap btn-txt">提款</div>
           </a>
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="transe_point.html">
-            <div><img class="w-100" src="../assets/img/trans_icon.svg" alt=""></div>
+            <div><img class="w-100" src="./assets/img/trans_icon.svg" alt=""></div>
             <div class="text-nowrap btn-txt">轉點</div>
           </a>
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="bank_account.html">
-            <div><img class="w-100" src="../assets/img/wallet_icon.svg" alt="wallet"></div>
+            <div><img class="w-100" src="./assets/img/wallet_icon.svg" alt="wallet"></div>
             <div class="text-nowrap btn-txt">帳戶管理</div>
           </a>
         </div>
@@ -120,15 +120,15 @@
         <ul class="list-group list-group-flush">
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="vip_level.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-member-leve.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-member-leve.png" alt="">
             <div class="account-list-txt me-auto">會員等級</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="promotion_history.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-promo.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-promo.png" alt="">
             <div class="account-list-txt me-auto">優惠專區</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
         </ul>
       </div>
@@ -139,15 +139,15 @@
         <ul class="list-group list-group-flush">
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="transe_history.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-trans.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-trans.png" alt="">
             <div class="account-list-txt me-auto">交易紀錄</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="game_record_history.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-game.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-game.png" alt="">
             <div class="account-list-txt me-auto">遊戲紀錄</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
         </ul>
       </div>
@@ -158,9 +158,9 @@
         <ul class="list-group list-group-flush">
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="feedback.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-feedback.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-feedback.png" alt="">
             <div class="account-list-txt me-auto">消息反饋</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
         </ul>
       </div>
@@ -171,27 +171,27 @@
         <ul class="list-group list-group-flush">
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="helper.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-child.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-child.png" alt="">
             <div class="account-list-txt me-auto">新手幫助</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="reason_bet.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-brain.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-brain.png" alt="">
             <div class="account-list-txt me-auto">理性博彩</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="rule.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-rule.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-rule.png" alt="">
             <div class="account-list-txt me-auto">規則與條款</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
             href="privacy_policy.html">
-            <img class="account-list-icon me-2" src="../assets/img/icon-pol.png" alt="">
+            <img class="account-list-icon me-2" src="./assets/img/icon-pol.png" alt="">
             <div class="account-list-txt me-auto">隱私及政策</div>
-            <img src="../assets/img/arrow-right.svg" alt="">
+            <img src="./assets/img/arrow-right.svg" alt="">
           </a>
         </ul>
       </div>
@@ -212,28 +212,28 @@
     <div class="container-fluid px-4">
       <div class="navbar-nav w-100 justify-content-between">
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/">
-          <img src="/assets/img/home_icon.svg" alt="home_icon">
+          href="./index.html">
+          <img src="./assets/img/home_icon.svg" alt="home_icon">
           <span>首頁</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center active"
-          href="/pages/promotions.html">
-          <img src="/assets/img/present_icon.svg" alt="present_icon">
+          href="./promotions.html">
+          <img src="./assets/img/present_icon.svg" alt="present_icon">
           <span>優惠</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
-          href="/pages/contact.html">
-          <img src="/assets/img/help_icon.svg" alt="help_icon">
+          href="./contact.html">
+          <img src="./assets/img/help_icon.svg" alt="help_icon">
           <span>客服</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="add_value.html">
-          <img src="/assets/img/icon-recharge.svg" alt="help_icon">
+          <img src="./assets/img/icon-recharge.svg" alt="help_icon">
           <span>儲值</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="#">
-          <img src="/assets/img/member-center-icon-active.svg" alt="account_icon">
+          <img src="./assets/img/member-center-icon-active.svg" alt="account_icon">
           <span>會員</span>
         </a>
       </div>
@@ -243,7 +243,7 @@
 
 
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
