--- a/band_account_USDT_add.html
+++ b/band_account_USDT_add.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 新增USDT帳戶</title>
 </head>
 
@@ -15,7 +15,7 @@
   <!-- title -->
   <div class="title d-flex container-fluid bg-dark text-white">
     <a class="col-4 d-block text-white text-decoration-none" href="bank_account.html"><img class="rotateY"
-        src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
+        src="./assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
     <div class="col-4 text-nowrap">
       <h2 class="fs-5 mb-0 text-center">新增USDT帳戶</h2>
     </div>
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="card bg-secondary w-100 mb-2" style="width: 18rem;">
       <div class="card-header position-relative py-2">
-        <img class="position-absolute top-50 start-0 translate-middle" src="../assets/img/title_decorate.svg"
+        <img class="position-absolute top-50 start-0 translate-middle" src="./assets/img/title_decorate.svg"
           alt="title_decorate">
         <div class="fw-bold">填寫USDT帳戶資訊</div>
       </div>
@@ -61,7 +61,7 @@
   </div><!-- 表單 end-->
   <div class="mb-2"></div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script>
     // 圖片上傳預覽
     imgInp.onchange = evt => {
