--- a/feedback.html
+++ b/feedback.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 消息反饋</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       消息反饋
     </h2>
@@ -49,7 +49,7 @@
               aria-controls="offcanvasBottom">
               <input type="text" class="form-control rounded-3 is-invalid" id="inputQutionType" placeholder="請選擇問題類型"
                 aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
-              <img class="d-block" src="../assets/img/arrow-right.svg" alt=""
+              <img class="d-block" src="./assets/img/arrow-right.svg" alt=""
                 style="position: absolute;right: 8px;top: 15px;z-index: 9;">
               <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
             </div>
@@ -80,7 +80,7 @@
             </div>
             <div id="uploader"
               class="uploader d-flex flex-column justify-content-center align-items-center bg-transparent">
-              <img src="../assets/img/upload.svg" alt="upload">
+              <img src="./assets/img/upload.svg" alt="upload">
               <div>請點擊此處上傳</div>
             </div>
             <input accept="image/*" type='file' id="imgInp" class="d-none" multiple>
@@ -123,21 +123,21 @@
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
             <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio1">
               <div class="me-2">類型A</div>
-              <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+              <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
             </label>
           </div>
           <div class="canvas-option">
             <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
             <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio2">
               <div class="me-auto">類型B</div>
-              <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+              <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
             </label>
           </div>
           <div class="canvas-option">
             <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
             <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio3">
               <div>類型C</div>
-              <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+              <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
             </label>
           </div>
         </div>
@@ -147,7 +147,7 @@
 
 
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
   <!-- 圖片上傳 -->
   <script>
