--- a/name_edit.html
+++ b/name_edit.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 會員名稱修改</title>
 </head>
 
@@ -15,7 +15,7 @@
   <!-- title -->
   <div class="title d-flex container-fluid bg-dark text-white">
     <a class="col-4 d-block text-white text-decoration-none" href="account_detail.html"><img class="rotateY"
-        src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
+        src="./assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
     <div class="col-4 text-nowrap">
       <h2 class="fs-5 mb-0 text-center">會員名稱修改</h2>
     </div>
@@ -37,7 +37,7 @@
             <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
           </div>
           <div class="text-muted fs-8 mt-2">
-            <img src="../assets/img/info_icon.svg" alt="info_icon">
+            <img src="./assets/img/info_icon.svg" alt="info_icon">
             <span>請注意會員名稱只能修改 ? 次</span>
           </div>
         </div>
@@ -74,7 +74,7 @@
   </div>
   <!-- 確認窗 Modal end-->
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
