--- a/order_established.html
+++ b/order_established.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 訂單已成立</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       訂單已成立
     </h2>
@@ -23,7 +23,7 @@
   <!-- title end -->
   <div class="container">
     <div class="mx-auto my-5 text-center">
-      <img src="../assets/img/order_established.png" alt="order_established">
+      <img src="./assets/img/order_established.png" alt="order_established">
       <h5 class="mt-3">訂單已成立</h5>
       <div class="mt-3">您可以繼續儲值或者前往儲值紀錄</div>
       <div>查看您的儲值狀態!</div>
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
