--- a/promotion_detail.html
+++ b/promotion_detail.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 優惠名稱</title>
 </head>
 
 <body>
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="promotions.html"><img src="../assets/img/arrow_right_gray.svg"
+    <a class="back-icon" href="promotions.html"><img src="./assets/img/arrow_right_gray.svg"
         alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       優惠名稱
@@ -28,7 +28,7 @@
     <p class="fs-7">內文文字內文文字內文文字內文文字內文文字內文文字內文文字內文文字內文文字內文文字內文文字</p>
   </div>
   <!-- 資訊 end-->
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
