--- a/transe_point.html
+++ b/transe_point.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 轉點</title>
 </head>
 
@@ -19,7 +19,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換成功</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -29,7 +29,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -39,7 +39,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -49,7 +49,7 @@
   <!-- Toast 訊息，根據需求使用 end-->
   <!-- title -->
   <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <a class="back-icon" href="account.html"><img src="./assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
       轉點
     </h2>
@@ -62,7 +62,7 @@
       <div class="pe-2 pb-3 position-relative d-flex flex-row justify-content-between align-items-center">
         <div class="card-title" id="txtEl">請[點選]轉點錢包</div>
         <div class="form-check form-switch" style="transform: translateY(6px);">
-          <img class="ms-1" src="/assets/img/question-circle-fill.svg" alt="" data-bs-toggle="tooltip"
+          <img class="ms-1" src="./assets/img/question-circle-fill.svg" alt="" data-bs-toggle="tooltip"
             data-bs-placement="bottom" title="開啟自動轉點時，系統將會自動把點數全部幫您轉進遊戲平台內">
           <label class="form-check-label align-middle fs-7" for="flexSwitchCheckDefault">自動轉點</label>
           <input onchange="switchOnChange(this.checked)" class="form-check-input" type="checkbox" role="switch"
@@ -76,15 +76,15 @@
             data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
             <input id="source" class="form-control btn text-center fs-7 fs-6 bg-transparent px-0" type="text"
               aria-label="readonly input example" value="主帳戶錢包" readonly>
-            <img class="d-block" src="../assets/img/arrow-right.svg" alt="">
+            <img class="d-block" src="./assets/img/arrow-right.svg" alt="">
           </div>
           <div class="col-2 d-flex align-items-center" onclick="transferPosition()"><img
-              src="../assets/img/trans_icon_gray.svg" alt="trans_icon_gray"></div>
+              src="./assets/img/trans_icon_gray.svg" alt="trans_icon_gray"></div>
           <div class="col-5 d-flex flex-row justify-content-center align-items-center" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasBottom_2" aria-controls="offcanvasBottom_2">
             <input id="target" class="form-control btn text-center fs-7 fs-6 bg-transparent px-0" type="text"
               aria-label="readonly input example" value="平台名稱" readonly>
-            <img class="d-block me-2" src="../assets/img/arrow-right.svg" alt="">
+            <img class="d-block me-2" src="./assets/img/arrow-right.svg" alt="">
           </div>
         </div>
         <div class="input-group has-validation mb-2">
@@ -103,7 +103,7 @@
       <div class=" position-relative py-2 d-flex flex-row align-items-center">
         <div class="card-title w-100 d-flex">
           <div class="me-1">我的錢包</div>
-          <img class="me-auto" src="../assets/img/renew.svg" alt="">
+          <img class="me-auto" src="./assets/img/renew.svg" alt="">
           <span class="fs-7" data-bs-toggle="modal" data-bs-target="#checkEdit">一鍵回收</span>
         </div>
 
@@ -112,9 +112,9 @@
       <div class="card-body pt-1">
         <div
           class="position-relative d-flex flex-row justify-content-between align-items-center rounded-3 border border-danger w-100 p-3">
-          <img class="position-absolute top-0 start-0" src="../assets/img/out.svg" alt="">
+          <img class="position-absolute top-0 start-0" src="./assets/img/out.svg" alt="">
           <div class="d-flex flex-row align-items-center">
-            <img src="../assets/img/wallet.svg" alt="">
+            <img src="./assets/img/wallet.svg" alt="">
             <div class="ms-1">主帳戶點數</div>
           </div>
           <div class="me-1 text-primary fw-bolder">$ 1,234,567.<span class="fs-7">00</span></div>
@@ -126,7 +126,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -134,7 +134,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -142,7 +142,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -150,7 +150,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -158,7 +158,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -166,7 +166,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -174,7 +174,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -182,7 +182,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -190,7 +190,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -198,7 +198,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -206,7 +206,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -214,7 +214,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -222,7 +222,7 @@
         <div class="col d-grid">
           <button type="button"
             class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2">
-            <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+            <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
             <div>00.00</div>
             <div class="text-muted">API名稱</div>
           </button>
@@ -273,21 +273,21 @@
           <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio1">
             <div class="me-2">主帳戶錢包</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio2">
             <div class="me-auto">平台名稱</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio3">
             <div>平台名稱</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
       </div>
@@ -307,35 +307,35 @@
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_1" autocomplete="off" checked>
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_1">
             <div class="me-2">平台名稱</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_2" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_2">
             <div class="me-auto">平台名稱</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_3" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_3">
             <div>平台名稱</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_4" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_4">
             <div>平台名稱</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_5" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_5">
             <div>平台名稱</div>
-            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+            <div class="py-auto"><img src="./assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
       </div>
@@ -343,7 +343,7 @@
   </div>
   <!-- 平台名稱 offcanvas end-->
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script>
     //#region 轉點按鈕狀態切換
     var buttons = [].slice.call(document.querySelectorAll('.btn-gray'))
