--- a/transe_point_history.html
+++ b/transe_point_history.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <link href="./assets/css/all.css" rel="stylesheet" type="text/css">
   <title>WEBO - 轉點紀錄</title>
 </head>
 
@@ -15,7 +15,7 @@
   <!-- title -->
   <div class="title d-flex container-fluid bg-dark text-white">
     <a class="col-4 d-block text-white text-decoration-none" href="account.html"><img class="rotateY"
-        src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
+        src="./assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
     <div class="col-4 text-nowrap">
       <h2 class="fs-5 mb-0 text-center">轉點紀錄</h2>
     </div>
@@ -74,7 +74,7 @@
     <!-- list -->
     <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
       <div class="card-body py-2 d-flex flex-row px-3">
-        <img class="me-2" src="../assets/img/trans_icon_gray.svg" alt="bank">
+        <img class="me-2" src="./assets/img/trans_icon_gray.svg" alt="bank">
         <div>
           <div>主帳戶 > 平台名稱</div>
           <div class="text-muted fs-8">03-29 18:33:24</div>
@@ -87,7 +87,7 @@
     </a>
     <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
       <div class="card-body py-2 d-flex flex-row px-3">
-        <img class="me-2" src="../assets/img/trans_icon_gray.svg" alt="bank">
+        <img class="me-2" src="./assets/img/trans_icon_gray.svg" alt="bank">
         <div>
           <div>平台名稱 > 平台名稱</div>
           <div class="text-muted fs-8">03-29 18:33:24</div>
@@ -100,7 +100,7 @@
     </a>
     <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
       <div class="card-body py-2 d-flex flex-row px-3">
-        <img class="me-2" src="../assets/img/trans_icon_gray.svg" alt="bank">
+        <img class="me-2" src="./assets/img/trans_icon_gray.svg" alt="bank">
         <div>
           <div>主帳戶 > 平台名稱</div>
           <div class="text-muted fs-8">03-29 18:33:24</div>
@@ -112,7 +112,7 @@
       </div>
     </a>
     <div class="mx-auto my-5 text-center">
-      <img src="../assets/img/no_data.svg" alt="no_data">
+      <img src="./assets/img/no_data.svg" alt="no_data">
       <div class="mt-3">目前暫無資料</div>
       <div class="d-grid gap-2 mt-3">
         <a class="btn btn-primary fs-6" href="account.html">返回</a>
@@ -121,7 +121,7 @@
     <!-- list end-->
   </div>
 
-  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
